# dotfiles

./: !  .bashrc  .gitignore  .tmux.conf  .zshrc  Brewfile  README.md  aliases  ea205ghkey  gh_token  ghtoken  pkgs.txt  rpm_removed.txt  settings.json  vscode_extensions  zshrc.bak
.config/: picom.conf
.config/.scripts/: pulse_connect.sh  stow_setup.sh
.config/hypr/: hyprland.conf
.config/kitty/: kitty.conf  open-actions.conf
.keys/: eajr@win11_wsl  eajr@win11_wsl.pub
Ansible-Scripts/arch-based/: aur_packages.txt  packages.yaml  variables.yaml
Hyprland-Dots/ml4w-hypr/: application-style.lua  hypridle.lua  hyprland.lua
Hyprland-Dots/ml4w-hypr/UserConfigs/: UserKeybinds.conf
Hyprland-Dots/ml4w-hypr/configs/: Keybinds.conf
LazyVim/.config/lazyvim/: lazy-lock.json  lazyvim.json
LazyVim/.config/nvim/: WARP.md  init.lua  lazy-lock.json  (+1 more)
Non-Stow/Ansible/: hosts  inventory.yaml  packages.yml  shell.yml
Non-Stow/Code/: keybindings.json  settings.json
dnf-zsh/: .zshrc
hypr/UserConfigs/: UserSettings.conf
omarchzsh/: .zshrc
scripts/.scripts/: anakin_distrobox.sh  brew-install-fonts  bridge_swap.sh  colors.sh  connect_tscale_exit_node.sh  enable_route.sh  enter_box.sh  hotkeys.sh  k8s_setup.sh  packages.sh  reset_bridge.sh  setup.sh  showKeybinds.sh  tmux-servers  tmux_neovim_workflow.sh  upStudio.sh  upall.sh  xfce
scripts/.scripts/scraper/: my_download.py  parse_file.py  pyproject.toml  scraper-python.py
sway/: config
tmux/: .tmux.conf
vim/: .vim_mru_files  .viminfo  .vimrc
void-zsh/: .zshrc
zsh/: .zshrc
zsh-aliases/: .zsh_aliases.zsh
(+1947 files in other folders)
