[project]
name = "scraper"
version = "0.1.0"
description = "Python scraper for my online business"
authors = [
    {name = "Earnest Abrom Jr",email = "147937399+earnestabromjr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
